@@ -94,6 +94,16 @@ DEFINE STOREX 05048
 DEFINE STOREX8 05049
 DEFINE STOREX16 0504A
 DEFINE STOREX32 0504B
+DEFINE CMPJUMP.G 05050
+DEFINE CMPJUMP.GE 05051
+DEFINE CMPJUMP.E 05052
+DEFINE CMPJUMP.NE 05053
+DEFINE CMPJUMP.LE 05054
+DEFINE CMPJUMP.L 05055
+DEFINE CMPJUMPU.G 05060
+DEFINE CMPJUMPU.GE 05061
+DEFINE CMPJUMPU.LE 05064
+DEFINE CMPJUMPU.L 05065
 
 # 2OP Integer Group
 DEFINE NEG 090000
